--- a/app/views/follow_up.html
+++ b/app/views/follow_up.html
@@ -7,6 +7,7 @@
       </div>
     </div>
 
+    <h4>&nbsp;</h4>
     <div class="row">
       <div class="col-md-3">
         <button class="btn btn-default botao-esticado"><span class="glyphicon glyphicon-refresh"></span> Atualizar</button>
