--- a/app/styles/_follow_up.scss
+++ b/app/styles/_follow_up.scss
@@ -8,13 +8,21 @@
     margin-bottom: 10px;
   }
 
-  .status-legenda {
-    div, h5 {
-      display: inline-block;
-    }
+  .legenda-status{
+    width: 100%;
+    max-width: 100%;
+    display: inline;
+    overflow: hidden;
+    color: #777;
+  }
 
-    h5 {
-      font-size: 1.2em;
+  .filtros {
+    position: relative;
+
+    .close {
+      position: absolute;
+      top: 7px;
+      right: 7px;
     }
   }
 }
@@ -54,6 +62,15 @@
   }
 }
 
+#tabela-em-lote {
+  td, th {
+    padding: 4px 5px;
+    &:first-child {
+      width: 28px;
+    }
+  }
+}
+
 .atendimento {
   margin-top: 40px;
   margin-bottom: 40px;
@@ -85,6 +102,12 @@
 
   a.btn-orcamento {
     padding: 10px;
+  }
+
+  .orcamentos {
+    max-height: 140px;
+    height: 140px;
+    overflow-y: auto;
   }
 
   .cliente {
@@ -200,19 +223,3 @@
     }
   }
 }
-
-//.campo-duplo {
-//  > div {
-//    padding: 0 4px;
-//  }
-//
-//  > div:last-child {
-//    padding-left: 4px !important;
-//    padding-right: 0 !important;
-//  }
-//
-//  > div:nth-child(2){
-//    padding-left: 0 !important;
-//    padding-right: 4px !important;
-//  }
-//}
