--- a/app/views/atendimento.html
+++ b/app/views/atendimento.html
@@ -1,7 +1,77 @@
 <div class="atendimento container">
 
 
-  <div class="row card">
+  <div class="row card" ng-if="atendimento.codigosArray">
+    <div class="col-xs-12">
+      <div class="head" ng-click="formularios.info = !formularios.info; scrollTo($event)">
+        <h3>
+          <span class="glyphicon glyphicon-list-alt"></span>
+          Criação de Atendimentos em Lote
+          <span class="glyphicon" ng-class="{true:'glyphicon-menu-up', false: 'glyphicon-menu-down'}[formularios.info]"></span>
+        </h3>
+      </div>
+    </div>
+    <div class="col-xs-12" uib-collapse="!formularios.info">
+      <div class="row">
+        <div class="col-md-6">
+          <h4>Dados dos Atendimentos</h4>
+          <div class="orcamentos well">
+            <dl class="dl-horizontal">
+              <dt>Criado por:</dt>
+              <dd>{{atendimento.atendimento.usuario.usuario}} ({{atendimento.atendimento.usuario.nome}})</dd>
+              <dt>Criado em:</dt>
+              <dd>{{atendimento.atendimento.dataCadastro | date:'short'}}</dd>
+              <dt>Status:</dt>
+              <dd><span class="label label-default" ng-style="{backgroundColor:atendimento.statusArray[0].cor}">{{atendimento.statusArray[0].nome}}</span></dd>
+            </dl>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <h4>Dados dos Orçamentos</h4>
+          <div class="orcamentos well">
+            <dl class="dl-horizontal">
+              <dt>Total de Orçamentos:</dt>
+              <dd>{{atendimento.codigosArray.length}} orçamento<span ng-if="atendimento.codigosArray.length > 1">s</span></dd>
+              <dt>Total de Clientes:</dt>
+              <dd>{{atendimento.clientes}} cliente<span ng-if="atendimento.clientes > 1">s</span></dd>
+              <dt>Total de Vendedores</dt>
+              <dd>{{atendimento.vendedores}} vendedor<span ng-if="atendimento.vendedores > 1">es</span></dd>
+              <dt>Data Inicial:</dt>
+              <dd>{{atendimento.min}}</dd>
+              <dt>Data Final:</dt>
+              <dd>{{atendimento.max}}</dd>
+            </dl>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="row">
+            <div class="col-xs-8">
+              <h4>Pessoa de Contato</h4>
+              <input type="text" class="form-control" ng-disabled="atendimento.atendimento.isEncerrado()" ng-model="novoParecer.pessoaDeContato">
+            </div>
+            <div class="col-xs-4">
+              <h4>Tipo de Contato</h4>
+              <select class="form-control" ng-options="tipo.id as tipo.nome for tipo in atendimento.tiposContato" ng-model="novoParecer.contatoId" ng-disabled="atendimento.atendimento.isEncerrado()">
+                <option value="" disabled>Selecione um tipo</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <h4>Texto</h4>
+          <div class="parecer well">
+            <textarea class="form-control" ng-disabled="atendimento.atendimento.isEncerrado()" ng-model="novoParecer.texto"></textarea>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="row card" ng-if="!atendimento.codigosArray">
     <div class="col-xs-12">
       <div class="head" ng-click="formularios.info = !formularios.info; scrollTo($event)">
         <h3>
@@ -17,23 +87,6 @@
     <div class="col-xs-12" uib-collapse="!formularios.info">
       <div class="row">
         <div class="col-md-6">
-          <h4>Dados do Cliente</h4>
-          <div class="cliente well">
-            <dl class="dl-horizontal">
-              <dt>Código:</dt>
-              <dd>{{atendimento.atendimento.pedido.cliente.codigo || 'Não disponível'}}</dd>
-              <dt>Nome:</dt>
-              <dd>{{atendimento.atendimento.pedido.cliente.nome || 'Não disponível'}}</dd>
-              <dt>Telefone:</dt>
-              <dd>{{atendimento.atendimento.pedido.cliente.telefone || 'Não disponível'}}</dd>
-              <dt>Celular:</dt>
-              <dd>{{atendimento.atendimento.pedido.cliente.celular ? atendimento.atendimento.pedido.cliente.dddCelular : ''}} {{atendimento.atendimento.pedido.cliente.celular || 'Não disponível'}}</dd>
-              <dt>Email</dt>
-              <dd>{{atendimento.atendimento.pedido.cliente.email || 'Não disponível'}}</dd>
-            </dl>
-          </div>
-        </div>
-        <div class="col-md-6">
           <h4>Dados do Atendimento</h4>
           <div class="info well">
             <dl class="dl-horizontal">
@@ -47,10 +100,31 @@
               <dd>{{atendimento.atendimento.dataCadastro | date:'short'}}</dd>
               <dt>Atualizado em:</dt>
               <dd>{{atendimento.atendimento.dataUpdate ? (atendimento.atendimento.dataUpdate | date:'short') : 'Não disponível'}}</dd>
-              <dt>Orçamento:</dt>
-              <dd>{{atendimento.atendimento.pedido.codigo || 'Não disponível'}}</dd>
               <dt>Pareceres:</dt>
               <dd>{{atendimento.atendimento.parecer.length ? atendimento.atendimento.parecer.length : 'Nenhum'}} parecer{{atendimento.atendimento.parecer.length > 1 ? 'es' : ''}}</dd>
+              <dt>Último parecer em:</dt>
+              <dd>{{atendimento.atendimento.parecer.length ? (atendimento.atendimento.parecer[0].dataCadastro | date: 'short') : 'Não disponível'}}</dd>
+            </dl>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <h4>Dados do Orçamento</h4>
+          <div class="cliente well">
+            <dl class="dl-horizontal">
+              <dt>Código:</dt>
+              <dd>{{atendimento.atendimento.pedido.codigo || 'Não disponível'}}</dd>
+              <dt>Cliente:</dt>
+              <dd>
+                ({{atendimento.atendimento.pedido.cliente.codigo}})
+                {{atendimento.atendimento.pedido.cliente.nome}}<br>
+                Telefone: {{atendimento.atendimento.pedido.cliente.telefone || 'Não disponível'}} /
+                Celular: {{atendimento.atendimento.pedido.cliente.celular ? atendimento.atendimento.pedido.cliente.dddCelular : ''}} {{atendimento.atendimento.pedido.cliente.celular || 'Não disponível'}} /
+                Email: {{atendimento.atendimento.pedido.cliente.email || 'Não disponível'}}<br>
+              </dd>
+              <dt>Vendedor:</dt>
+              <dd>{{atendimento.atendimento.pedido.vendedor.nome || 'Não disponível'}}</dd>
+              <dt>Valor Total:</dt>
+              <dd>{{atendimento.atendimento.pedido.valor | currency: 'R$ '}}</dd>
             </dl>
           </div>
         </div>
@@ -60,7 +134,7 @@
 
   <br>
 
-  <div class="row card">
+  <div class="row card" ng-if="!atendimento.codigosArray">
     <div class="col-xs-12">
       <div class="head" ng-click="formularios.parecer = !formularios.parecer; scrollTo($event)">
         <h3>
@@ -124,7 +198,7 @@
 
   <br>
 
-  <div class="row card">
+  <div class="row card" ng-if="!atendimento.codigosArray">
     <div class="col-xs-12">
       <div class="head" ng-click="formularios.historico = !formularios.historico; scrollTo($event)">
         <h3>
@@ -166,10 +240,16 @@
         Voltar
       </a>
     </div>
-    <div class="col-sm-6 col-md-3 col-md-push-6">
+    <div class="col-sm-6 col-md-3 col-md-push-6" ng-if="!atendimento.codigosArray">
       <button class="btn btn-orcamento" ng-disabled="atendimento.atendimento.isEncerrado()" ng-click="atendimento.encerrarAtendimento()">
         <span class="glyphicon glyphicon-save"></span>
         Encerrar
+      </button>
+    </div>
+    <div class="col-sm-6 col-md-3 col-md-push-6" ng-if="atendimento.codigosArray">
+      <button class="btn btn-orcamento" ng-disabled="atendimento.atendimento.isEncerrado()" ng-click="atendimento.salvarParecer()">
+        <span class="glyphicon glyphicon-floppy-save"></span>
+        Salvar
       </button>
     </div>
   </div>
