--- a/app/views/follow_up.html
+++ b/app/views/follow_up.html
@@ -14,11 +14,11 @@
       </div>
 
       <div class="col-md-3">
-        <button class="btn btn-default botao-esticado" data-toggle="modal" data-target="#modalFiltros"><span class="glyphicon glyphicon-search"></span> Filtrar</button>
+        <button class="btn btn-default botao-esticado" ng-click="followUp.showFiltros = !followUp.showFiltros" data-toggle="modal" data-target="#modalFiltros"><span class="glyphicon glyphicon-search"></span> Filtrar</button>
       </div>
 
       <div class="col-md-3">
-        <button class="btn btn-default botao-esticado" ng-click="followUp.buscarPedido()"><span class="glyphicon glyphicon-plus"></span> Adicionar</a>
+        <button class="btn btn-default botao-esticado" ng-click="followUp.buscarPedido()"><span class="glyphicon glyphicon-plus"></span> Adicionar</button>
       </div>
 
       <div class="col-md-3">
@@ -26,17 +26,114 @@
       </div>
     </div>
 
-    <!--<div class="col-xs-12 well">-->
-      <!---->
-    <!--</div>-->
+    <!--FILTROS-->
+    <h4 uib-collapse="!followUp.showFiltros">&nbsp;</h4>
+    <div class="col-xs-12 well filtros" uib-collapse="!followUp.showFiltros">
+      <a href="" class="close" ng-click="followUp.showFiltros = false"><span class="glyphicon glyphicon-remove"></span></a>
+      <div class="row condensar-rows">
+        <div class="col-md-2">
+          <h4>Atendimento</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" keys-shortcuts enter="buscar()">
+            <span class="input-group-btn">
+                  <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
+                </span>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <h4>Orçamento</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" keys-shortcuts enter="buscar()">
+            <span class="input-group-btn">
+                  <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
+                </span>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <h4>Cliente</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-value="cliente.codigo + (cliente.codigo?' - ':'') + cliente.nome" placeholder="Clique na lupa para buscar" readonly="true">
+            <span class="input-group-btn">
+                  <button class="btn btn-default" tabindex="-1" ng-click="removeCliente()"><span class="glyphicon glyphicon-remove"></span></button>
+                  <button class="btn btn-default" tabindex="-1" ng-click="buscarCliente()"><span class="glyphicon glyphicon-search"></span></button>
+                </span>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <h4>Responsável</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-value="cliente.codigo + (cliente.codigo?' - ':'') + cliente.nome" placeholder="Clique na lupa para buscar" readonly="true">
+            <span class="input-group-btn">
+                  <button class="btn btn-default" tabindex="-1" ng-click="removeCliente()"><span class="glyphicon glyphicon-remove"></span></button>
+                  <button class="btn btn-default" tabindex="-1" ng-click="buscarCliente()"><span class="glyphicon glyphicon-search"></span></button>
+                </span>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <h4>Data</h4>
+          <select name="" class="form-control">
+            <option value="">Cadastro</option>
+            <option value="">Último Parecer</option>
+          </select>
+        </div>
+        <div class="col-md-2">
+          <h4>Inicial</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
+            <span class="input-group-btn">
+              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+            </span>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <h4>Final</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
+            <span class="input-group-btn">
+              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+            </span>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <h4>Valor máximo</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-model="dtInicial" currency number-only model-view-value="true" keys-shortcuts enter="buscar()">
+            <span class="input-group-btn">
+              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+            </span>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <h4>Valor mínimo</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-model="dtInicial" currency number-only model-view-value="true" keys-shortcuts enter="buscar()">
+            <span class="input-group-btn">
+              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+            </span>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <h4>Status</h4>
+          <select name="" class="form-control" ng-model="filtros.status" ng-options="status.id as status.nome for status in followUp.statusArray">
+            <option value="" disabled>Selecione um status</option>
+          </select>
+        </div>
+      </div>
+      <div class="row condensar-rows">
+        <div class="col-sm-3 col-md-2 col-md-push-8">
+          <h4>&nbsp;</h4>
+          <button class="btn btn-default btn-block"><span class="glyphicon glyphicon-remove"></span> Limpar filtros</button>
+        </div>
+        <div class="col-sm-3 col-md-2 col-md-push-8">
+          <h4>&nbsp;</h4>
+          <button class="btn btn-default btn-block"><span class="glyphicon glyphicon-refresh"></span> Atualizar</button>
+        </div>
+      </div>
+    </div>
 
     <div class="row">
       <div class="col-xs-12">
         <h3>Atendimentos</h3>
-        <div class="hidden-xs col-sm-4 col-md-3 status-legenda" ng-repeat="s in followUp.statusArray">
-          <div class="mostrador-de-cor" ng-style="{backgroundColor:s.cor}"></div>
-          <h5>{{s.nome}}</h5>
-        </div>
       </div>
       <div class="col-xs-12">
         <table class="tabela tabela-bordered tabela-esticada">
@@ -87,136 +184,9 @@
         </table>
       </div>
     </div>
-  </div>
-
-</div>
-
-<!--MODAL FILTROS-->
-<div class="modal meu-modal fade" id="modalFiltros" tabindex="-1" role="dialog" aria-labelledby="modalFiltros">
-  <div class="modal-dialog" role="document" style="width: 1000px">
-    <div class="modal-content">
-      <div class="header">
-        <div class="title"><span class="glyphicon glyphicon-pencil"></span> Tipo <span
-          class="glyphicon glyphicon-remove close" ng-click="configuracoes.cancelarModalTipoFollowUp()"></span></div>
-      </div>
-      <div class="body">
-
-        <div class="container">
-          <div class="row condensar-rows">
-            <div class="col-md-2">
-              <h4>Atendimento</h4>
-              <div class="input-group">
-                <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" keys-shortcuts enter="buscar()">
-                <span class="input-group-btn">
-                  <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
-                </span>
-              </div>
-            </div>
-            <div class="col-md-2">
-              <h4>Orçamento</h4>
-              <div class="input-group">
-                <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" keys-shortcuts enter="buscar()">
-                <span class="input-group-btn">
-                  <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
-                </span>
-              </div>
-            </div>
-            <div class="col-xs-12 col-md-4">
-              <h4>Cliente</h4>
-              <div class="input-group">
-                <input type="text" class="form-control" ng-value="cliente.codigo + (cliente.codigo?' - ':'') + cliente.nome" placeholder="Clique na lupa para buscar um cliente" readonly="true">
-                <span class="input-group-btn">
-                  <button class="btn btn-default" tabindex="-1" ng-click="removeCliente()"><span class="glyphicon glyphicon-remove"></span></button>
-                  <button class="btn btn-default" tabindex="-1" ng-click="buscarCliente()"><span class="glyphicon glyphicon-search"></span></button>
-                </span>
-              </div>
-            </div>
-            <div class="col-xs-12 col-md-4">
-              <h4>Responsável</h4>
-              <div class="input-group">
-                <input type="text" class="form-control" ng-value="cliente.codigo + (cliente.codigo?' - ':'') + cliente.nome" placeholder="Clique na lupa para buscar um cliente" readonly="true">
-                <span class="input-group-btn">
-                  <button class="btn btn-default" tabindex="-1" ng-click="removeCliente()"><span class="glyphicon glyphicon-remove"></span></button>
-                  <button class="btn btn-default" tabindex="-1" ng-click="buscarCliente()"><span class="glyphicon glyphicon-search"></span></button>
-                </span>
-              </div>
-            </div>
-            <div class="col-xs-6 col-md-4">
-              <h4>Data de Cadastro (inicial x final)</h4>
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="input-group">
-                    <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
-                    </span>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="input-group">
-                    <input type="text" class="form-control" ng-model="dtFinal" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" tabindex="-1" ng-click="dtFinal=''"><span class="glyphicon glyphicon-remove"></span></button>
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-6 col-md-4 campo-duplo">
-              <h4>Data de Atualização (inicial x final)</h4>
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="input-group">
-                    <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
-                    </span>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="input-group">
-                    <input type="text" class="form-control" ng-model="dtFinal" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" tabindex="-1" ng-click="dtFinal=''"><span class="glyphicon glyphicon-remove"></span></button>
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-6 col-md-4">
-              <h4>Último Parecer (inicial x final)</h4>
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="input-group">
-                    <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
-                    </span>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="input-group">
-                    <input type="text" class="form-control" ng-model="dtFinal" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" tabindex="-1" ng-click="dtFinal=''"><span class="glyphicon glyphicon-remove"></span></button>
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <h4>Status</h4>
-              <select name="" class="form-control"></select>
-            </div>
-          </div>
-        </div>
-
-      </div>
-      <div class="footer">
-        <button type="button" class="btn btn-default" ng-click="configuracoes.cancelarModalTipoFollowUp()"><span class="glyphicon glyphicon-remove"></span> Fechar</button>
-        <button type="button" class="btn btn-default" ng-click="configuracoes.salvarTipoFollowUp()"><span class="glyphicon glyphicon-erase"></span> Limpar</button>
-      </div>
+    <div class="legenda-status" ng-repeat="s in followUp.statusArray">
+      <span class="glyphicon glyphicon-stop" ng-style="{color:s.cor}"></span>&nbsp;{{s.nome}}
     </div>
   </div>
+
 </div>
-<!--FIM MODAL-->
